--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
     <table border="1" style="width: 100%; height: 100%">
       <tbody>
 		  <tr>
-            <td class="left">
-                <table border="1">
+            <td class="left top">
+                <table class="element" border="1">
                     <thead>
                         <tr>
                             <th colspan="2">Nested Table 2</th>
@@ -29,8 +29,8 @@
                     </tbody>
                 </table>
             </td>
-            <td class="right">
-                <table border="1">
+            <td class="right top">
+                <table class="element" border="1">
                     <thead>
                         <th>Nested Table 1</th>
                     </thead>
@@ -49,8 +49,8 @@
             </td>
           </tr>
           <tr>
-            <td class="left">
-                <table border="1">
+            <td class="left bottom">
+                <table class="element" border="1">
                     <thead>
                         <th colspan="2">Nested Table 3</th>
                     </thead>
@@ -62,8 +62,8 @@
                     </tbody>
                 </table>
             </td>
-            <td class="right">
-                <table border="1">
+            <td class="right bottom">
+                <table class="element" border="1">
                     <thead>
                         <th>Nested Table 4</th>
                     </thead>
